feat(v7): fastjson2 for serialization of GraphQLResponse and deserialization of GraphQLRequest (#2042)
### :pencil: Description
cherry pick
https://github.com/ExpediaGroup/graphql-kotlin/pull/2040/files

---------

Co-authored-by: Samuel Vazquez <samvazquez@expediagroup.com>