@@ -16,10 +16,12 @@
 
 package com.expediagroup.graphql.server
 
-import com.expediagroup.graphql.server.testtypes.GraphQLServerRequest
+import com.alibaba.fastjson2.JSON
+import com.alibaba.fastjson2.JSONWriter
+import com.alibaba.fastjson2.to
+import com.expediagroup.graphql.server.types.GraphQLServerRequest
 import com.fasterxml.jackson.module.kotlin.jacksonObjectMapper
 import com.fasterxml.jackson.module.kotlin.readValue
-import kotlinx.serialization.json.Json
 import org.openjdk.jmh.annotations.Benchmark
 import org.openjdk.jmh.annotations.Fork
 import org.openjdk.jmh.annotations.Measurement
@@ -30,16 +32,16 @@ import org.openjdk.jmh.annotations.Warmup
 import java.util.concurrent.TimeUnit
 
 @State(Scope.Benchmark)
-@Fork(5)
-@Warmup(iterations = 1, time = 5, timeUnit = TimeUnit.SECONDS)
-@Measurement(iterations = 5, time = 2, timeUnit = TimeUnit.SECONDS)
+@Fork(value = 5, jvmArgsAppend = ["--add-modules=jdk.incubator.vector", "-Dfastjson2.readerVector=true"])
+@Warmup(iterations = 1, time = 1, timeUnit = TimeUnit.SECONDS)
+@Measurement(iterations = 4, time = 5, timeUnit = TimeUnit.SECONDS)
 open class GraphQLServerRequestDeserializationBenchmark {
     private val mapper = jacksonObjectMapper()
     private lateinit var request: String
-    private lateinit var batchRequest: String
 
     @Setup
     fun setUp() {
+        JSON.config(JSONWriter.Feature.WriteNulls)
         val loader = this::class.java.classLoader
         val operation = loader.getResource("StarWarsDetails.graphql")!!.readText().replace("\n", "\\n")
         val variables = loader.getResource("StarWarsDetailsVariables.json")!!.readText()
@@ -50,25 +52,11 @@ open class GraphQLServerRequestDeserializationBenchmark {
                 "variables": $variables
             }
         """.trimIndent()
-        batchRequest = """
-            [
-                { "operationName": "StarWarsDetails", "query": "$operation", "variables": $variables },
-                { "operationName": "StarWarsDetails", "query": "$operation", "variables": $variables },
-                { "operationName": "StarWarsDetails", "query": "$operation", "variables": $variables },
-                { "operationName": "StarWarsDetails", "query": "$operation", "variables": $variables }
-            ]
-        """.trimIndent()
     }
 
     @Benchmark
     fun JacksonDeserializeGraphQLRequest(): GraphQLServerRequest = mapper.readValue(request)
 
     @Benchmark
-    fun JacksonDeserializeGraphQLBatchRequest(): GraphQLServerRequest = mapper.readValue(batchRequest)
-
-    @Benchmark
-    fun KSerializationDeserializeGraphQLRequest(): GraphQLServerRequest = Json.decodeFromString(request)
-
-    @Benchmark
-    fun KSerializationDeserializeGraphQLBatchRequest(): GraphQLServerRequest = Json.decodeFromString(batchRequest)
+    fun FastJsonDeserializeGraphQLRequest(): GraphQLServerRequest = request.to()
 }
